--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-		</div>
+		</div id="sign-up-section">
 			<div 
 				data-tf-widget="lyputUsZ" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;">
 			</div>
